@@ -1,4 +1,9 @@
 2011-02-19  Robert Larice
+ * src/frontend/numparam/mystring.c ,
+ * src/frontend/numparam/xpressn.c :
+    numparm, rewrite some conditional expressions
+
+2011-02-19  Robert Larice
  * src/frontend/numparam/mystring.c :
     silence compiler warnings
 
